src/test/deca/context/invalid/SansObjet/DeclVar-UnaryNOT-int-float.deca
// Description:
//    Declaration of a int variable using ! operation on a float variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    int z = !x ; 
}
